# nbt-json

./: Cargo.toml  LICENSE.md  README.md  pkg.sh
.github/workflows/: rust.yml
locales/: de_DE.toml  en_US.toml  fr_FR.toml  it_IT.toml  ja_JP.toml  ko_KR.toml  zh_CN.toml  zh_TW.toml
src/: json.rs  lib.rs  main.rs  nbt.rs
src/nbt/: resolver.rs
