[dependencies]
cesu8 = "1"
color-print = "0.3"
rust-i18n = "3"
serde_json = "1"

[dependencies.bytes]
features = [
    "serde"
]
version = "1"

[dependencies.clap]
features = [
    "derive",
    "help",
    "string"
]
version = "4"

[dependencies.flate2]
default-features = false
features = [
    "zlib-ng"
]
version = "1"

[dependencies.serde]
features = [
    "derive"
]
version = "1"

[package]
description = "A simple converter for NBT and JSON"
edition = "2021"
homepage = "https://github.com/ms0503/nbt-json#readme"
license-file = "LICENSE.md"
name = "nbt-json"
readme = "README.md"
repository = "https://github.com/ms0503/nbt-json"
version = "0.2.0"

[package.metadata.i18n]
available-locales = [
    "de_DE",
    "en_US",
    "fr_FR",
    "it_IT",
    "ja_JP",
    "ko_KR",
    "zh_CN",
    "zh_TW"
]
default-locale = "en_US"
load-path = "locales"
